feat(i18n): translate strings

--- a/i18n/en/docusaurus-theme-classic/footer.json
+++ b/i18n/en/docusaurus-theme-classic/footer.json
@@ -1,30 +1,30 @@
 {
   "link.title.站内导航": {
-    "message": "站内导航",
+    "message": "Quick links",
     "description": "The title of the footer links column with title=站内导航 in the footer"
   },
   "link.title.社区资源": {
-    "message": "社区资源",
+    "message": "Community resources",
     "description": "The title of the footer links column with title=社区资源 in the footer"
   },
   "link.title.企业资源": {
-    "message": "企业资源",
+    "message": "Enterprise resources",
     "description": "The title of the footer links column with title=企业资源 in the footer"
   },
   "link.item.label.每周一龙": {
-    "message": "每周一龙",
+    "message": "This Week in LoongArch",
     "description": "The label of footer link with label=每周一龙 linking to /newsletter"
   },
   "link.item.label.本站动态": {
-    "message": "本站动态",
+    "message": "Site news",
     "description": "The label of footer link with label=本站动态 linking to /blog"
   },
   "link.item.label.龙芯社区 GitHub": {
-    "message": "龙芯社区 GitHub",
+    "message": "Loongson Community GitHub",
     "description": "The label of footer link with label=龙芯社区 GitHub linking to https://github.com/loongson-community"
   },
   "link.item.label.LoongArch 非官方论坛": {
-    "message": "LoongArch 非官方论坛",
+    "message": "LoongArch unofficial forum",
     "description": "The label of footer link with label=LoongArch 非官方论坛 linking to https://bbs.loongarch.org"
   },
   "link.item.label.Telegram Loongson Group": {
@@ -32,23 +32,23 @@
     "description": "The label of footer link with label=Telegram Loongson Group linking to https://t.me/loongson_users"
   },
   "link.item.label.龙芯用户闲聊 Matrix 群": {
-    "message": "龙芯用户闲聊 Matrix 群",
+    "message": "Matrix Loongson offtopic room",
     "description": "The label of footer link with label=龙芯用户闲聊 Matrix 群 linking to https://matrix.to/#/%23loongson-users-ot:matrix.org"
   },
   "link.item.label.百度贴吧龙芯吧": {
-    "message": "百度贴吧龙芯吧",
+    "message": "Baidu Tieba",
     "description": "The label of footer link with label=百度贴吧龙芯吧 linking to https://tieba.baidu.com/f?kw=%E9%BE%99%E8%8A%AF&ie=utf-8"
   },
   "link.item.label.龙芯公司官网": {
-    "message": "龙芯公司官网",
+    "message": "Loongson Corp. official site",
     "description": "The label of footer link with label=龙芯公司官网 linking to https://loongson.cn"
   },
   "link.item.label.龙芯公司官方 GitHub": {
-    "message": "龙芯公司官方 GitHub",
+    "message": "Loongson official GitHub",
     "description": "The label of footer link with label=龙芯公司官方 GitHub linking to https://github.com/loongson"
   },
   "copyright": {
-    "message": "© 2022-2023 本项目的贡献者们。本项目与龙芯公司利益无关。<br />龙芯®、龙芯中科®、龙芯架构®、龙架构®、Loongson®、LoongArch®等是龙芯中科技术股份有限公司（688047.SH）的注册商标。",
+    "message": "© 2022-2023 Project contributors. This project is unaffiliated with Loongson.<br />龙芯®, 龙芯中科®, 龙芯架构®, 龙架构®, Loongson®, LoongArch® etc. are registered trademarks of Loongson Corporation (688047.SH).",
     "description": "The footer copyright"
   },
   "link.title.第三方维护资源": {
