docs(blog): add we-are-now-served-from-cn-mainland and related faq

--- a/blog/2023-04-01-site-faqs.md
+++ b/blog/2023-04-01-site-faqs.md
@@ -10,6 +10,30 @@ tags: [主创团队的话]
 
 <!-- truncate -->
 
+### 我在中国大陆，有的链接打不开？ {#external-link-connectivity}
+
+本站所关心、报道的大部分内容，都属于 IT 基础设施业界的最前沿动态。
+但由于中国大陆基础信息产业的客观现实——产生相对晚近、发展较为落后，
+相关的代码仓库、协作基础设施等，多数位于中国大陆境外：
+因而即便是中国大陆的技术人员，这些年也必须想办法在这些网站工作。
+其中的一部分网站，视您所在的地区、网络提供商而定，就不见得能正常访问。
+
+为了更好地提醒该情况，
+我们将本站正文中那些确定（或很可能）指向中国大陆境外的链接展示为<a class="link--overseas">这样</a>；
+由于技术限制，有些其他外链不方便做这种处理，但也可能属于该情况。
+另外，我们在所有页面的页脚也加了一段类似的提醒文字。
+
+如果您想顺着某个链接拓展阅读但连不上，您也得跟我们技术人员一样，
+想办法改善下您的网络接入环境：
+本站的程序没法<small>儿</small>顺着网线摸到您的路由器，替您做这事<small>儿</small>。
+
+本站不会提供这些页面的快照：很多网站是动态的，没法<small>儿</small>快照，
+并且快照内容的存储和公开分发是个问题。
+毕竟本站无意重新发明一遍○度快照或者 Internet Wayback Machine[^注一]。
+本站更不会提供这些页面的截图：这不仅会使排版混乱，而且浪费流量。
+
+[^注一]: 这俩服务一个停止公开了，一个在大陆不能用，也很能说明为啥这样不合适……
+
 ### 网站为啥叫这个名<small>儿</small>？
 
 意在[致敬 Mozilla](https://wiki.mozilla.org/Areweyet)。
