docs(newsletter): this-week-in-loongarch-23: fix incomplete leading paragraph

--- a/newsletter/2023-11-06-this-week-in-loongarch-23.mdx
+++ b/newsletter/2023-11-06-this-week-in-loongarch-23.mdx
@@ -7,7 +7,7 @@ tags: [每周一龙]
 ---
 
 每周一都为大家报道 LoongArch&reg; 社区最前线的第一手新鲜资讯！
-上周的进展主要有。
+上周的进展主要有 LoongArch&reg; ABI v2.20、Linux、GCC 以及 LLVM。
 详情点进来看！
 
 {/* truncate */}
