docs: migrate to new custom directives
```sh
rg -l 'tā' blog docs newsletter | xargs sed -i 's/tā/:ta:/g'
rg -l 'small' blog docs newsletter | xargs sed -i 's@<small>儿</small>@:儿:@g'
```

then manually fix some rendering problems after the migration, e.g.
blog/2023-04-01-welcome.md (have to add spaces around the fragment; I
don't want to use <s> in this case)

natlang style guide is amended accordingly

--- a/newsletter/2023-08-28-this-week-in-loongarch-13.mdx
+++ b/newsletter/2023-08-28-this-week-in-loongarch-13.mdx
@@ -88,7 +88,7 @@ import ColumnedList from '@site/src/components/ColumnedList'
 * Zhihong Dong
 </ColumnedList>
 
-当你使用龙架构 Linux 6.5 时，别忘了向 tā 们表达一声感谢！
+当你使用龙架构 Linux 6.5 时，别忘了向 :ta: 们表达一声感谢！
 
 :::info
 本节报道的信息可以通过简单的 `git` 操作从 Linux 仓库中获取：
@@ -105,7 +105,7 @@ git log --grep='[Ll]oong' v6.4..v6.5
 
 8 月 28 日，Lulu Cheng 为龙架构 `-O2` 及更高的优化级别[默认开启了](https://gcc.gnu.org/pipermail/gcc-patches/2023-August/628538.html)移除非必要符号扩展、零扩展操作的优化，
 也[合并了](https://gcc.gnu.org/pipermail/gcc-patches/2023-August/628534.html)
-25 日 tā 自己写的避免 `SLT` 指令引起多余符号扩展动作的补丁。
+25 日 :ta: 自己写的避免 `SLT` 指令引起多余符号扩展动作的补丁。
 
 #### LLVM
 
