docs: remove almost all erhua marks except 趟儿、活儿、份儿
revising natlang-style-guide along the way

Fixes: https://github.com/loongson-community/areweloongyet/issues/113

--- a/blog/2023-04-01-welcome.md
+++ b/blog/2023-04-01-welcome.md
@@ -10,7 +10,7 @@ tags: [主创团队的话]
 
 本站意图成为龙架构&reg;（LoongArch&reg;）新世界生态建设的信息整合平台，
 致力于服务生态开发者、贡献者，
-也力争对最终用户「有点:儿:用」。
+也力争对最终用户「有点用」。
 
 本站代码[完全开源][this-site]，欢迎来上游坐坐！
 
