feat: remove all trademark symbols
Trademark symbols are meant for use by the *trademark owners*, to make
the trademarked content more prominently so, *not us*. We as
third-parties disseminating neutral content about the respective
trademarked products, have no obligation to highlight the trademarks for
them -- we're unaffiliated after all!

Switch to a short, neutral (that doesn't single out Loongson; we're
discussing multiple other companies' products for a while already), and
hopefully correct notice in the page footer, and remove every "&reg;"
from the whole site.

--- a/blog/2023-04-01-welcome.md
+++ b/blog/2023-04-01-welcome.md
@@ -8,7 +8,7 @@ tags: [主创团队的话]
 经过几个月的断断续续建设，本站所含数据的可视化工作终于到达一种「又不是不能用」的程度了。
 为了致敬龙芯生态的此一光荣传统，也就到了本站在各大龙芯交流社区抛头露面 ~~、丢脸掉份:儿:~~ 的时候了。
 
-本站意图成为龙架构&reg;（LoongArch&reg;）新世界生态建设的信息整合平台，
+本站意图成为龙架构（LoongArch）新世界生态建设的信息整合平台，
 致力于服务生态开发者、贡献者，
 也力争对最终用户「有点用」。
 
