--- a/newsletter/2023-08-28-this-week-in-loongarch-13.mdx
+++ b/newsletter/2023-08-28-this-week-in-loongarch-13.mdx
@@ -6,7 +6,7 @@ date: 2023-08-28T16:06:17+08:00
 tags: [每周一龙]
 ---
 
-每周一都为大家报道 LoongArch&reg; 社区最前线的第一手新鲜资讯！
+每周一都为大家报道 LoongArch 社区最前线的第一手新鲜资讯！
 
 {/* truncate */}
 
@@ -14,7 +14,7 @@ tags: [每周一龙]
 
 ## 先「马」再看
 
-本栏目的内容具有一定延续性，将持续追踪报道 LoongArch&reg; 领域的重要或长期项目（坑）。
+本栏目的内容具有一定延续性，将持续追踪报道 LoongArch 领域的重要或长期项目（坑）。
 
 ### Linux
 
