feat: ensure all blog articles are truncated
as per Docusaurus 3.5.0 recommendation

--- a/blog/2023-04-01-welcome.md
+++ b/blog/2023-04-01-welcome.md
@@ -15,3 +15,5 @@ tags: [主创团队的话]
 本站代码[完全开源][this-site]，欢迎来上游坐坐！
 
 [this-site]: https://github.com/loongson-community/areweloongyet
+
+<!-- truncate -->
