--- a/newsletter/2023-10-16-this-week-in-loongarch-20.mdx
+++ b/newsletter/2023-10-16-this-week-in-loongarch-20.mdx
@@ -98,7 +98,9 @@ Debian 上游工作也有所进展：`binutils` 包的改动[获合并](https://
 
 ## 杂闻播报
 
-<a name="freedesktop-sdk-initial-support-merged"></a>
+import Link from '@docusaurus/Link';
+
+<Link id="freedesktop-sdk-initial-support-merged" />
 10 月 10 日，社区同学 Robin Lee 做的 FreeDesktop SDK 龙架构初步适配[获合并](https://gitlab.com/freedesktop-sdk/freedesktop-sdk/-/merge_requests/12203)。
 FreeDesktop SDK 是 Flatpak 打包方案的基础运行时。
 
