--- a/newsletter/2023-11-06-this-week-in-loongarch-23.mdx
+++ b/newsletter/2023-11-06-this-week-in-loongarch-23.mdx
@@ -28,7 +28,7 @@ LoongArch v1.10 的新增特性。
 
 #### Linux 6.6
 
-我们在周报第 14 期[整理过了](./2023-09-04-this-week-in-loongarch-14.md#linux-6.6-loongarch-changes)
+我们在周报第 14 期[整理过了](./2023-09-04-this-week-in-loongarch-14.mdx#linux-6.6-loongarch-changes)
 Linux 6.6 的龙架构相关变更，可方便跳转阅读。
 
 除此之外值得一提的是：从该版本开始，Linux 的默认调度算法被重做了，
