--- a/newsletter/2023-09-04-this-week-in-loongarch-14.mdx
+++ b/newsletter/2023-09-04-this-week-in-loongarch-14.mdx
@@ -16,7 +16,11 @@ tags: [每周一龙]
 
 本栏目的内容具有一定延续性，将持续追踪报道 LoongArch 领域的重要或长期项目（坑）。
 
-### Linux {#linux-6.6-loongarch-changes}
+### Linux {#linux}
+
+import Link from '@docusaurus/Link'
+
+<Link id="linux-6.6-loongarch-changes" />
 
 截至发稿时，Linux 6.6 的合并窗口工作正风生水起，子系统维护者们都在忙着整理代码、提交 <ruby>PR<rt>拉取请求</rt></ruby>。
 合并窗口预计在美西时间的本周日下午（9 月 10 日；中国时间 9 月 11 日）关闭；
