feat: shorten "Site news" to "News" in the navbar

--- a/i18n/en/docusaurus-theme-classic/navbar.json
+++ b/i18n/en/docusaurus-theme-classic/navbar.json
@@ -12,7 +12,7 @@
     "description": "Navbar item with label 每周一龙"
   },
   "item.label.本站动态": {
-    "message": "Site news",
+    "message": "News",
     "description": "Navbar item with label 本站动态"
   },
   "item.label.GitHub": {
