--- a/i18n/en/code.json
+++ b/i18n/en/code.json
@@ -352,5 +352,20 @@
   "theme.contentVisibility.draftBanner.message": {
     "message": "This page is a draft. It will only be visible in dev and be excluded from the production build.",
     "description": "The draft content banner message"
+  },
+  "第一个“形如此”之前的内容（对汉语而言为空）": {
+    "message": "Links "
+  },
+  "形如此": {
+    "message": "like this"
+  },
+  "第一个与第二个“形如此”之间的内容（对汉语而言为“的链接，或部分”）": {
+    "message": " or some "
+  },
+  "第二个“形如此”之后的内容（对汉语而言为“的链接，其目标主机可能位于中国大陆境外。”）": {
+    "message": " may point to hosts outside of the Chinese mainland."
+  },
+  "如需跟进阅读却无法访问，请自行寻找解决方案。": {
+    "message": " You are on your own in case of connectivity problems."
   }
 }
