feat: update the homepage banner

--- a/i18n/en/code.json
+++ b/i18n/en/code.json
@@ -377,17 +377,8 @@
     "description": "Description of the homepage"
   },
   "awly.homepage.slogan": {
-    "message": "ONTHEWAY!",
+    "message": "STAYVIGILANT!",
     "description": "Slogan of the homepage"
-  },
-  "Linux 开源生态的多数基础组件，其最新版本都已包含 LoongArch 支持了。": {
-    "message": "LoongArch support has entered most parts of the open-source Linux infrastructure."
-  },
-  "尽管龙芯公司仍未公开 LoongArch 手册的其余部分，但大量公开信息如 QEMU、内核适配已将相关指令编码与具体行为尽数披露，手册的缺失已不再能阻碍优化的脚步。": {
-    "message": "Even though the Loongson Corporation has yet to release the remaining volumes of the LoongArch manual, thanks to a wealth of public information such as publicly available QEMU and Linux changes, \"undisclosed\" information such as instruction encoding and behaviors is, in effect, already public. The absence of manuals can no longer hinder optimization efforts by The People."
-  },
-  "我们预计将在 2023~2024 看到 LoongArch 新世界生态的突飞猛进，有您的参与会更快些。": {
-    "message": "We expect to see the LoongArch new-world ecosystem evolve rapidly in the 2023-2024 period; it will be even faster with YOU."
   },
   "本站由社区建设维护，": {
     "message": "This site is community-maintained. "
@@ -397,5 +388,14 @@
   },
   "！": {
     "message": "!"
+  },
+  "不出意外地，2023-2024 是龙架构基础生态建设风生水起的两年。在多数的基础设施项目，龙架构支持都已成功并入主线、受到持续维护。": {
+    "message": "As expected, 2023-2024 were two thriving years of LoongArch. LoongArch support has been successfully mainlined in most infrastructure projects, and enjoys continued maintenance."
+  },
+  "然而，外部形势波诡云谲，我们的事业面对着，并且仍将面对更多技术的、非技术的挑战乃至风险：更广阔的使用场景、更多元的用户人群，我们的工作量与困难前无古人。": {
+    "message": "However, the external environment is ever more turbulent; our mission faces, and will continue to face, more challenges and risks both technical and non-technical: our workload and hardship are unprecedented in the face of broader use cases and more diverse user communities."
+  },
+  "我们认为 2025-2026 是关键的转折点。世界瞬息万变，唯有终日乾乾、夕惕若厉；动心忍性，枕戈待旦。与君共勉！": {
+    "message": "We believe 2025-2026 to be a critical period of transition. In the face of a world ever-changing, only by vigilance and perseverance can we see the light of day. Time to get down to work!"
   }
 }
