feat: emphasize that the focus is on the LoongArch ecosystem

--- a/i18n/en/code.json
+++ b/i18n/en/code.json
@@ -395,7 +395,7 @@
   "然而，外部形势波诡云谲，我们的事业面对着，并且仍将面对更多技术的、非技术的挑战乃至风险：更广阔的使用场景、更多元的用户人群，我们的工作量与困难前无古人。": {
     "message": "However, the external environment is ever more turbulent; our mission faces, and will continue to face, more challenges and risks that are both technical and non-technical: our workload and hardship are unprecedented in the face of broader use cases and more diverse user communities."
   },
-  "我们认为 2025-2026 是关键的转折点。世界瞬息万变，唯有终日乾乾、夕惕若厉；动心忍性，枕戈待旦。与君共勉！": {
-    "message": "We believe 2025-2026 to be a critical period of transition. In the face of a world ever-changing, only by vigilance and perseverance can we see the light of day, through a journey of self-perfection. Let's get down to work!"
+  "我们认为 2025-2026 对龙架构生态而言是关键的转折点。世界瞬息万变，唯有终日乾乾、夕惕若厉；动心忍性，枕戈待旦。与君共勉！": {
+    "message": "We believe 2025-2026 to be a critical period of transition for the LoongArch ecosystem. In the face of a world ever-changing, only by vigilance and perseverance can we see the light of day, through a journey of self-perfection. Let's get down to work!"
   }
 }
